# cameronrutherford

./: .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint.yaml  README.md  SECURITY.md  _publish.yml  _quarto-base.yml  _quarto-cpp.yml  _quarto-devops.yml  _quarto-hrt.yml  _quarto-onepager.yml  _quarto-python.yml  _quarto.yml  index.html  index.qmd  personal-repo.qmd  pyproject.toml  render.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.devcontainer/blog-codingInterview/: Dockerfile  devcontainer.json
.devcontainer/blog-cppInterview/: Dockerfile  devcontainer.json
.devcontainer/blog-cudaInterview/: Dockerfile  devcontainer.json
.devcontainer/blog-pythonInterview/: Dockerfile  devcontainer.json  pyproject.toml
.devcontainer/blog-pythonIterview/: Dockerfile  devcontainer.json  postCreateCommand.sh
.devcontainer/dev-build/: Dockerfile  devcontainer.json  postCreateCommand.sh
.devcontainer/docs-prebuilt/: devcontainer.json  postCreateCommand.sh
config/: devcontainer.qmd  github-actions.qmd  poetry.qmd  pre-commit.qmd  quarto.qmd  quickstart.qmd
docs/: README.md  personal-repo.html  search.json
quarto/: README.md  executive-summary.qmd  old_resume.qmd  readme.html  readme.qmd  resume.html  resume.qmd  template.tex  windows.qmd
resume/: NOTES-hrt.md  _metadata.yaml  conferences.qmd  cpp_resume.qmd  devops_resume.qmd  education.qmd  experience.qmd  hrt_resume.qmd  old_resume.qmd  onepager_resume.qmd  other.qmd  publications.qmd  python_resume.qmd  resume.qmd  skills.qmd  template.tex
(+78 files in other folders)
